compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__operator_pipe_right_hand_side.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 403
expression: "fn id(x) {\n  x\n}\n        \npub fn bool_expr(x, y) {\n  y || x |> id \n}"

---
-module(the_app).
-compile(no_auto_import).

-export([bool_expr/2]).

-spec id(L) -> L.
id(X) ->
    X.

-spec bool_expr(boolean(), boolean()) -> boolean().
bool_expr(X, Y) ->
    Y orelse begin
        _pipe = X,
        id(_pipe)
    end.

